--- a/WebServer/static/html/fr_bookDetail.html
+++ b/WebServer/static/html/fr_bookDetail.html
@@ -121,7 +121,7 @@
                           </div>
                         </div>
                         <div class="col-md-3">
-                          <div id="user-rank">
+                          <div id="user-rank" class="hide">
                             <div class="rank-item" id="user-rank-button">
                               <img src="" />
                             </div>
@@ -129,7 +129,7 @@
                           </div>
                         </div>
                         <div class="col-md-3">
-                          <a id="reading-note" href="">
+                          <a id="reading-note" href="" class="hide">
                             <img src="../img/notion_logo.png" />
                             <div>독후감 쓰러가기</div>
                           </a>
