--- a/WebServer/static/html/fr_bookDetail.html
+++ b/WebServer/static/html/fr_bookDetail.html
@@ -37,10 +37,12 @@
               <div>& Reading Note</div>
             </div>
             <a href="#" class="nav-item nav-link" id="btn-home">홈</a>
-            <a href="#" class="nav-item nav-link" id="btn-recommend"
+            <a href="#" class="nav-item nav-link hide" id="btn-recommend"
               >추천 도서</a
             >
-            <a href="#" class="nav-item nav-link" id="btn-record">독서 기록</a>
+            <a href="#" class="nav-item nav-link hide" id="btn-record"
+              >독서 기록</a
+            >
             <div class="nav-item nav-link"></div>
             <div id="login-button" class="login-button">
               <img src="../img/notion_logo.png" />
@@ -121,7 +123,7 @@
                           </div>
                         </div>
                         <div class="col-md-3">
-                          <div id="user-rank" class="hide">
+                          <div class="hide" id="user-rank">
                             <div class="rank-item" id="user-rank-button">
                               <img src="" />
                             </div>
@@ -129,7 +131,7 @@
                           </div>
                         </div>
                         <div class="col-md-3">
-                          <a id="reading-note" href="" class="hide">
+                          <a class="hide" id="reading-note" href="">
                             <img src="../img/notion_logo.png" />
                             <div>독후감 쓰러가기</div>
                           </a>
