--- a/WebServer/static/html/fr_main.html
+++ b/WebServer/static/html/fr_main.html
@@ -37,10 +37,12 @@
               <div>& Reading Note</div>
             </div>
             <a href="#" class="nav-item nav-link" id="btn-home">홈</a>
-            <a href="#" class="nav-item nav-link" id="btn-recommend"
+            <a href="#" class="nav-item nav-link hide" id="btn-recommend"
               >추천 도서</a
             >
-            <a href="#" class="nav-item nav-link" id="btn-record">독서 기록</a>
+            <a href="#" class="nav-item nav-link hide" id="btn-record"
+              >독서 기록</a
+            >
             <div class="nav-item nav-link"></div>
             <div id="login-button" class="login-button">
               <img src="../img/notion_logo.png" />
