feat: add user rank get and update by isbn feat: add href to readNote fear: add login to report html

--- a/WebServer/static/html/fr_bookReport.html
+++ b/WebServer/static/html/fr_bookReport.html
@@ -46,6 +46,10 @@
             >
             <a href="#" class="nav-item nav-link" id="btn-record">독서 기록</a>
             <div class="nav-item nav-link"></div>
+            <div id="login-button" class="login-button">
+              <img src="../img/notion_logo.png" />
+              <div>Notion으로 로그인</div>
+            </div>
           </nav>
         </div>
         <div class="col-md-10" style="padding: 0">
@@ -55,7 +59,7 @@
                 <img src="" id="book-info-image" />
                 <div id="book-info-text"></div>
               </div>
-              <div id="btn-done">작성 완료</div>
+              <div id="btn-done" class="hide">작성 완료</div>
             </div>
             <div id="editor-area" class="scrollable-container">
               <div id="editor"></div>
