feat: add read note upload fix: notion get database bookname

--- a/WebServer/static/html/fr_bookDetail.html
+++ b/WebServer/static/html/fr_bookDetail.html
@@ -124,7 +124,10 @@
                         </div>
                         <div class="col-md-3">
                           <div class="hide" id="user-rank">
-                            <div class="rank-item" id="user-rank-button">
+                            <div
+                              class="rank-item disabled"
+                              id="user-rank-button"
+                            >
                               <img src="" />
                             </div>
                             <span>내가 한 평가</span>
