--- a/WebServer/static/html/fr_bookDetail.html
+++ b/WebServer/static/html/fr_bookDetail.html
@@ -155,5 +155,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="../js/fr_bookDetail.js"></script>
+    <script src="../js/fr_navigation.js"></script>
   </body>
 </html>
