--- a/WebServer/static/html/fr_bookReport.html
+++ b/WebServer/static/html/fr_bookReport.html
@@ -75,5 +75,6 @@
       });
     </script>
     <script src="../js/fr_bookReport.js"></script>
+    <script src="../js/fr_navigation.js"></script>
   </body>
 </html>
